fix: set `overflow-y` to `auto`

--- a/app/styles/app.sass
+++ b/app/styles/app.sass
@@ -263,7 +263,7 @@ select
   font-size: 16px
 
 .risk-icons
-  font-size: 14px 
+  font-size: 14px
 
 .side-menu
   .box
@@ -283,7 +283,7 @@ select
   position: fixed
   top: 510px
   bottom: 0
-  overflow-y: scroll
+  overflow-y: auto
   overflow-x: hidden
 
 
